Adding Project of content aggregating feed

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /fastify-test-app/node_modules
 /node_Web_Server/node_modules
 /Password_Mgr/node_modules
+/content_aggr_Feed/node_modules
+/node_modules
